--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <p><ImpressumTrading class="com"></ImpressumTrading>.</p>
 
-    <script src="sketch.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/novlio/glowNFT/sketch.js"></script>
 
     <script>
         function keyPressed() {
